// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`engine baseline without a liquidity provider > accumulation plan is unchanged 1`] = `
{
  "base": {
    "liquidityOk": true,
    "rows": [
      {
        "balanceBrl": 521833,
        "balanceUsd": 100352.5,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 523672.95,
        "balanceUsd": 100706.34,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 525519.88,
        "balanceUsd": 101061.52,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 527373.82,
        "balanceUsd": 101418.04,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 529234.79,
        "balanceUsd": 101775.92,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 531102.81,
        "balanceUsd": 102135.16,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 532977.93,
        "balanceUsd": 102495.76,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 534860.16,
        "balanceUsd": 102857.72,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 536749.53,
        "balanceUsd": 103221.06,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 538646.07,
        "balanceUsd": 103585.78,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 540549.8,
        "balanceUsd": 103951.88,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 542460.76,
        "balanceUsd": 104319.38,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-09",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 544378.97,
        "balanceUsd": 104688.26,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 546304.47,
        "balanceUsd": 105058.55,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 548237.27,
        "balanceUsd": 105430.24,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 550177.4,
        "balanceUsd": 105803.35,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 552124.9,
        "balanceUsd": 106177.87,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 554079.8,
        "balanceUsd": 106553.81,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 556042.12,
        "balanceUsd": 106931.18,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 558011.88,
        "balanceUsd": 107309.98,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 559989.13,
        "balanceUsd": 107690.22,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 561973.88,
        "balanceUsd": 108071.9,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 563966.17,
        "balanceUsd": 108455.03,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 565966.03,
        "balanceUsd": 108839.62,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-09",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 567973.48,
        "balanceUsd": 109225.67,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 569988.55,
        "balanceUsd": 109613.18,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 572011.28,
        "balanceUsd": 110002.17,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 574041.69,
        "balanceUsd": 110392.63,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 576079.82,
        "balanceUsd": 110784.58,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 578125.69,
        "balanceUsd": 111178.02,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 580179.33,
        "balanceUsd": 111572.95,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 582240.77,
        "balanceUsd": 111969.38,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 584310.04,
        "balanceUsd": 112367.32,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 586387.18,
        "balanceUsd": 112766.77,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 588472.21,
        "balanceUsd": 113167.73,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 590565.17,
        "balanceUsd": 113570.22,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-09",
        "withdrawalBrl": 0,
      },
    ],
    "summary": {
      "monthsFunded": 36,
      "monthsTotal": 36,
      "shortfallBrl": 0,
      "targetMet": true,
      "terminalBalanceBrl": 590565.17,
    },
  },
  "risk": [
    {
      "assetId": "usdc",
      "creditExposure": "Circle reserves",
      "depthNote": "no depth observation yet",
      "gates": [],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": "Circle",
      "label": null,
      "oracle": "n/a (unit)",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "hold; Circle primary for institutions",
      "redemptionTime": "instant on DEX",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
    {
      "assetId": "kamino-usdc",
      "creditExposure": "over-collateralised borrowers of the main market; smart-contract risk",
      "depthNote": null,
      "gates": [],
      "haircutRule": "HC-LEND-VAR",
      "haircutYield": 0.03,
      "issuer": "Kamino Finance (protocol)",
      "label": null,
      "oracle": "Scope / Pyth (Kamino reserve config)",
      "provenance": "fixture",
      "quotedYield": 0.04,
      "redemptionPath": "withdraw from reserve D6q6wuQSrifJKZYpR1M8R4YawnLDtDsMmWM1NbBmgJ59",
      "redemptionTime": "instant while reserve has liquidity; utilisation-gated",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "syrupusdc",
      "creditExposure": "institutional over-collateralised loans (Syrup pool)",
      "depthNote": "no depth observation yet",
      "gates": [
        "bridged asset: Solana liquidity depends on DEX depth",
      ],
      "haircutRule": "HC-REALISED",
      "haircutYield": 0.0495,
      "issuer": "Maple Finance",
      "label": null,
      "oracle": "pool exchange rate (Ethereum) / Jupiter price",
      "provenance": "fixture",
      "quotedYield": 0.055,
      "redemptionPath": "Jupiter DEX on Solana; primary redemption on Ethereum without KYC",
      "redemptionTime": "instant on DEX; primary queue on Ethereum",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "usdy",
      "creditExposure": "short-dated US Treasuries and bank deposits (tokenized note)",
      "depthNote": "no depth observation yet",
      "gates": [
        "primary redemption: KYC, non-US persons, minimum size",
        "Brazil listed as restricted jurisdiction for primary access (Ondo eligibility)",
      ],
      "haircutRule": "HC-REALISED",
      "haircutYield": 0.045000000000000005,
      "issuer": "Ondo Finance",
      "label": null,
      "oracle": "USDY price oracle (accrues by price)",
      "provenance": "fixture",
      "quotedYield": 0.05,
      "redemptionPath": "Jupiter DEX (secondary); primary mint/redeem needs KYC, non-US, minimum",
      "redemptionTime": "instant on DEX; primary T+ days",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "brl-leg",
      "creditExposure": "issuer of the BRL stablecoin (to be set at gate G-Nora)",
      "depthNote": null,
      "gates": [
        "primary mint limited to approved minters",
      ],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": null,
      "label": "BRS mint via Nora: integration in progress",
      "oracle": "n/a (1:1 BRL)",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "issuer redeem to USDC (to be set at gate G-Nora)",
      "redemptionTime": "to be set at gate G-Nora",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
  ],
  "solved": {
    "bindingConstraints": [
      "syrupusdc at cap 0.4",
      "usdy at cap 0.4",
    ],
    "legs": [
      {
        "amountUsd": 2000,
        "assetId": "usdc",
        "reasoning": "Liquidity buffer: covers withdrawals inside the 30-day window (1 month) plus a 2.0% floor",
        "weight": 0.02,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 3000,
        "assetId": "brl-leg",
        "reasoning": "Early-redemption reserve in reais (FX stance: accept)",
        "weight": 0.03,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 15000,
        "assetId": "kamino-usdc",
        "reasoning": "selected by haircut yield (protocol_api, rule HC-LEND-VAR, 2026-09-30)",
        "weight": 0.15,
        "yieldObservation": {
          "assetId": "kamino-usdc",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-LEND-VAR",
          "haircutYield": 0.03,
          "method": "protocol_api",
          "provenance": "fixture",
          "quotedYield": 0.04,
          "source": "fixture",
        },
      },
      {
        "amountUsd": 40000,
        "assetId": "syrupusdc",
        "reasoning": "Credit leg within the credit budget; selected by haircut yield (realised_30d, rule HC-REALISED, 2026-09-30)",
        "weight": 0.4,
        "yieldObservation": {
          "assetId": "syrupusdc",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-REALISED",
          "haircutYield": 0.0495,
          "method": "realised_30d",
          "provenance": "fixture",
          "quotedYield": 0.055,
          "source": "fixture",
        },
      },
      {
        "amountUsd": 40000,
        "assetId": "usdy",
        "reasoning": "selected by haircut yield (realised_30d, rule HC-REALISED, 2026-09-30)",
        "weight": 0.4,
        "yieldObservation": {
          "assetId": "usdy",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-REALISED",
          "haircutYield": 0.045000000000000005,
          "method": "realised_30d",
          "provenance": "fixture",
          "quotedYield": 0.05,
          "source": "fixture",
        },
      },
    ],
    "method": "lp",
    "notes": [],
  },
  "stresses": [
    {
      "id": "yields_fall",
      "name": "Yields fall",
      "summary": {
        "monthsFunded": 36,
        "monthsTotal": 36,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 554113.2,
      },
    },
    {
      "id": "brl_appreciates",
      "name": "BRL appreciates vs USD",
      "summary": {
        "monthsFunded": 36,
        "monthsTotal": 36,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 475572.13,
      },
    },
    {
      "id": "brl_depreciates",
      "name": "BRL depreciates vs USD",
      "summary": {
        "monthsFunded": 36,
        "monthsTotal": 36,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 705558.2,
      },
    },
    {
      "id": "credit_gate",
      "name": "Credit leg gated (redemption frozen)",
      "summary": {
        "monthsFunded": 36,
        "monthsTotal": 36,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 584680.09,
      },
    },
  ],
}
`;

exports[`engine baseline without a liquidity provider > high_risk plan is unchanged 1`] = `
{
  "base": {
    "liquidityOk": true,
    "rows": [
      {
        "balanceBrl": 521248,
        "balanceUsd": 100240,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 522501,
        "balanceUsd": 100480.96,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 523759.03,
        "balanceUsd": 100722.89,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 525022.09,
        "balanceUsd": 100965.79,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 526290.22,
        "balanceUsd": 101209.66,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 527563.43,
        "balanceUsd": 101454.51,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 528841.74,
        "balanceUsd": 101700.34,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 530125.18,
        "balanceUsd": 101947.15,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 531413.76,
        "balanceUsd": 102194.95,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 532707.51,
        "balanceUsd": 102443.75,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 534006.44,
        "balanceUsd": 102693.55,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 535310.57,
        "balanceUsd": 102944.34,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-09",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 536619.94,
        "balanceUsd": 103196.14,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 537934.55,
        "balanceUsd": 103448.95,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 539254.43,
        "balanceUsd": 103702.78,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 540579.61,
        "balanceUsd": 103957.62,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 541910.09,
        "balanceUsd": 104213.48,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 543245.91,
        "balanceUsd": 104470.37,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 544587.08,
        "balanceUsd": 104728.28,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 545933.62,
        "balanceUsd": 104987.24,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 547285.57,
        "balanceUsd": 105247.22,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 548642.93,
        "balanceUsd": 105508.26,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 550005.74,
        "balanceUsd": 105770.33,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 551374.01,
        "balanceUsd": 106033.46,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-09",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 552747.76,
        "balanceUsd": 106297.65,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 554127.02,
        "balanceUsd": 106562.89,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 555511.8,
        "balanceUsd": 106829.19,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 556902.14,
        "balanceUsd": 107096.57,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 558298.05,
        "balanceUsd": 107365.01,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 559699.56,
        "balanceUsd": 107634.53,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 561106.69,
        "balanceUsd": 107905.13,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 562519.46,
        "balanceUsd": 108176.82,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 563937.89,
        "balanceUsd": 108449.59,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 565362,
        "balanceUsd": 108723.46,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 566791.83,
        "balanceUsd": 108998.43,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 568227.38,
        "balanceUsd": 109274.5,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-09",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 569668.7,
        "balanceUsd": 109551.67,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 571115.79,
        "balanceUsd": 109829.96,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 572568.68,
        "balanceUsd": 110109.36,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 574027.4,
        "balanceUsd": 110389.88,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 575491.96,
        "balanceUsd": 110671.53,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 576962.4,
        "balanceUsd": 110954.31,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 578438.73,
        "balanceUsd": 111238.22,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 579920.98,
        "balanceUsd": 111523.26,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 581409.17,
        "balanceUsd": 111809.46,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 582903.33,
        "balanceUsd": 112096.79,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 584403.47,
        "balanceUsd": 112385.28,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 585909.64,
        "balanceUsd": 112674.93,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-09",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 587421.84,
        "balanceUsd": 112965.74,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 588940.1,
        "balanceUsd": 113257.71,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 590464.45,
        "balanceUsd": 113550.86,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 591994.92,
        "balanceUsd": 113845.18,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 593531.52,
        "balanceUsd": 114140.68,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 595074.28,
        "balanceUsd": 114437.36,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 596623.22,
        "balanceUsd": 114735.23,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 598178.38,
        "balanceUsd": 115034.3,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 599739.77,
        "balanceUsd": 115334.57,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 601307.42,
        "balanceUsd": 115636.04,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 602881.36,
        "balanceUsd": 115938.72,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 604461.61,
        "balanceUsd": 116242.62,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-09",
        "withdrawalBrl": 0,
      },
    ],
    "summary": {
      "monthsFunded": 60,
      "monthsTotal": 60,
      "shortfallBrl": 0,
      "targetMet": true,
      "terminalBalanceBrl": 604461.61,
    },
  },
  "risk": [
    {
      "assetId": "usdc",
      "creditExposure": "Circle reserves",
      "depthNote": "no depth observation yet",
      "gates": [],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": "Circle",
      "label": null,
      "oracle": "n/a (unit)",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "hold; Circle primary for institutions",
      "redemptionTime": "instant on DEX",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
    {
      "assetId": "syrupusdc",
      "creditExposure": "institutional over-collateralised loans (Syrup pool)",
      "depthNote": "no depth observation yet",
      "gates": [
        "bridged asset: Solana liquidity depends on DEX depth",
      ],
      "haircutRule": "HC-REALISED",
      "haircutYield": 0.0495,
      "issuer": "Maple Finance",
      "label": null,
      "oracle": "pool exchange rate (Ethereum) / Jupiter price",
      "provenance": "fixture",
      "quotedYield": 0.055,
      "redemptionPath": "Jupiter DEX on Solana; primary redemption on Ethereum without KYC",
      "redemptionTime": "instant on DEX; primary queue on Ethereum",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "usdy",
      "creditExposure": "short-dated US Treasuries and bank deposits (tokenized note)",
      "depthNote": "no depth observation yet",
      "gates": [
        "primary redemption: KYC, non-US persons, minimum size",
        "Brazil listed as restricted jurisdiction for primary access (Ondo eligibility)",
      ],
      "haircutRule": "HC-REALISED",
      "haircutYield": 0.045000000000000005,
      "issuer": "Ondo Finance",
      "label": null,
      "oracle": "USDY price oracle (accrues by price)",
      "provenance": "fixture",
      "quotedYield": 0.05,
      "redemptionPath": "Jupiter DEX (secondary); primary mint/redeem needs KYC, non-US, minimum",
      "redemptionTime": "instant on DEX; primary T+ days",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "spyx",
      "creditExposure": "issuer SPV holding the underlying ETF",
      "depthNote": "no depth observation yet",
      "gates": [
        "front-ends geo-block US/UK/CA/AU; token moves freely",
        "primary redemption 24/5 with KYC and a minimum (xStocks FAQ)",
        "Token-2022 permanentDelegate: issuer can move tokens",
        "Token-2022 pausable and transferHook extensions",
      ],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": "Backed Finance (xStocks)",
      "label": null,
      "oracle": "Chainlink 24/5 equities streams / Jupiter price",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "Jupiter DEX 24/7; primary redemption 24/5 via issuer",
      "redemptionTime": "instant on DEX (thin weekends); primary T+ days",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
    {
      "assetId": "qqqx",
      "creditExposure": "issuer SPV holding the underlying ETF",
      "depthNote": "no depth observation yet",
      "gates": [
        "front-ends geo-block US/UK/CA/AU; token moves freely",
        "primary redemption 24/5 with KYC and a minimum (xStocks FAQ)",
        "Token-2022 permanentDelegate: issuer can move tokens",
        "Token-2022 pausable and transferHook extensions",
      ],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": "Backed Finance (xStocks)",
      "label": null,
      "oracle": "Chainlink 24/5 equities streams / Jupiter price",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "Jupiter DEX 24/7; primary redemption 24/5 via issuer",
      "redemptionTime": "instant on DEX (thin weekends); primary T+ days",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
    {
      "assetId": "brl-leg",
      "creditExposure": "issuer of the BRL stablecoin (to be set at gate G-Nora)",
      "depthNote": null,
      "gates": [
        "primary mint limited to approved minters",
      ],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": null,
      "label": "BRS mint via Nora: integration in progress",
      "oracle": "n/a (1:1 BRL)",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "issuer redeem to USDC (to be set at gate G-Nora)",
      "redemptionTime": "to be set at gate G-Nora",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
  ],
  "solved": {
    "bindingConstraints": [
      "syrupusdc at cap 0.4",
    ],
    "legs": [
      {
        "amountUsd": 2000,
        "assetId": "usdc",
        "reasoning": "Liquidity buffer: covers withdrawals inside the 30-day window (1 month) plus a 2.0% floor",
        "weight": 0.02,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 3000,
        "assetId": "brl-leg",
        "reasoning": "Early-redemption reserve in reais (FX stance: accept)",
        "weight": 0.03,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 17500,
        "assetId": "spyx",
        "reasoning": "Risk budget (high) allocated to tokenized stocks for a high_risk goal; pays no income",
        "weight": 0.175,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 17500,
        "assetId": "qqqx",
        "reasoning": "Risk budget (high) allocated to tokenized stocks for a high_risk goal; pays no income",
        "weight": 0.175,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 40000,
        "assetId": "syrupusdc",
        "reasoning": "Credit leg within the credit budget; selected by haircut yield (realised_30d, rule HC-REALISED, 2026-09-30)",
        "weight": 0.4,
        "yieldObservation": {
          "assetId": "syrupusdc",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-REALISED",
          "haircutYield": 0.0495,
          "method": "realised_30d",
          "provenance": "fixture",
          "quotedYield": 0.055,
          "source": "fixture",
        },
      },
      {
        "amountUsd": 20000,
        "assetId": "usdy",
        "reasoning": "selected by haircut yield (realised_30d, rule HC-REALISED, 2026-09-30)",
        "weight": 0.2,
        "yieldObservation": {
          "assetId": "usdy",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-REALISED",
          "haircutYield": 0.045000000000000005,
          "method": "realised_30d",
          "provenance": "fixture",
          "quotedYield": 0.05,
          "source": "fixture",
        },
      },
    ],
    "method": "lp",
    "notes": [],
  },
  "stresses": [
    {
      "id": "yields_fall",
      "name": "Yields fall",
      "summary": {
        "monthsFunded": 60,
        "monthsTotal": 60,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 559741.7,
      },
    },
    {
      "id": "brl_appreciates",
      "name": "BRL appreciates vs USD",
      "summary": {
        "monthsFunded": 60,
        "monthsTotal": 60,
        "shortfallBrl": 0,
        "targetMet": false,
        "terminalBalanceBrl": 486689.28,
      },
    },
    {
      "id": "brl_depreciates",
      "name": "BRL depreciates vs USD",
      "summary": {
        "monthsFunded": 60,
        "monthsTotal": 60,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 722233.93,
      },
    },
    {
      "id": "credit_gate",
      "name": "Credit leg gated (redemption frozen)",
      "summary": {
        "monthsFunded": 60,
        "monthsTotal": 60,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 597965.41,
      },
    },
    {
      "id": "equity_drawdown",
      "name": "Equity drawdown",
      "summary": {
        "monthsFunded": 60,
        "monthsTotal": 60,
        "shortfallBrl": 0,
        "targetMet": true,
        "terminalBalanceBrl": 568061.61,
      },
    },
  ],
}
`;

exports[`engine baseline without a liquidity provider > income plan is unchanged 1`] = `
{
  "base": {
    "liquidityOk": true,
    "rows": [
      {
        "balanceBrl": 521680.25,
        "balanceUsd": 100323.13,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 523366.55,
        "balanceUsd": 100647.41,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 525058.91,
        "balanceUsd": 100972.87,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2026-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 526757.37,
        "balanceUsd": 101299.49,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-01",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 528461.94,
        "balanceUsd": 101627.3,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-02",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 530172.65,
        "balanceUsd": 101956.28,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-03",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 531889.52,
        "balanceUsd": 102286.45,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-04",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 533612.58,
        "balanceUsd": 102617.8,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-05",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 535341.83,
        "balanceUsd": 102950.35,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-06",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 537077.32,
        "balanceUsd": 103284.1,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-07",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 538819.06,
        "balanceUsd": 103619.05,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-08",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 540567.07,
        "balanceUsd": 103955.21,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-09",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 542321.38,
        "balanceUsd": 104292.57,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-10",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 544082.01,
        "balanceUsd": 104631.16,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-11",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 545848.98,
        "balanceUsd": 104970.96,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2027-12",
        "withdrawalBrl": 0,
      },
      {
        "balanceBrl": 544622.33,
        "balanceUsd": 104735.06,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 543402.06,
        "balanceUsd": 104500.4,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 542188.21,
        "balanceUsd": 104266.96,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 540980.8,
        "balanceUsd": 104034.77,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 539779.85,
        "balanceUsd": 103803.82,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 538585.39,
        "balanceUsd": 103574.11,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 537397.44,
        "balanceUsd": 103345.66,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 536216.02,
        "balanceUsd": 103118.47,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 535041.17,
        "balanceUsd": 102892.53,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 533872.89,
        "balanceUsd": 102667.86,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 532711.23,
        "balanceUsd": 102444.47,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 531556.19,
        "balanceUsd": 102222.35,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2028-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 530407.82,
        "balanceUsd": 102001.5,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 529257.06,
        "balanceUsd": 101780.2,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 528102.51,
        "balanceUsd": 101558.18,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 526944.17,
        "balanceUsd": 101335.42,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 525782,
        "balanceUsd": 101111.92,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 524616.01,
        "balanceUsd": 100887.69,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 523446.17,
        "balanceUsd": 100662.73,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 522272.48,
        "balanceUsd": 100437.01,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 521094.9,
        "balanceUsd": 100210.56,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 519913.45,
        "balanceUsd": 99983.36,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 518728.09,
        "balanceUsd": 99755.4,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 517538.81,
        "balanceUsd": 99526.69,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2029-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 516345.6,
        "balanceUsd": 99297.23,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 515148.44,
        "balanceUsd": 99067.01,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 513947.32,
        "balanceUsd": 98836.02,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 512742.22,
        "balanceUsd": 98604.27,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 511533.13,
        "balanceUsd": 98371.76,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 510320.03,
        "balanceUsd": 98138.47,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 509102.92,
        "balanceUsd": 97904.41,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 507881.76,
        "balanceUsd": 97669.57,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 506656.55,
        "balanceUsd": 97433.95,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 505427.27,
        "balanceUsd": 97197.55,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 504193.91,
        "balanceUsd": 96960.37,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 502956.45,
        "balanceUsd": 96722.39,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2030-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 501714.88,
        "balanceUsd": 96483.63,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 500469.18,
        "balanceUsd": 96244.07,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 499219.33,
        "balanceUsd": 96003.72,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 497965.32,
        "balanceUsd": 95762.56,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 496707.13,
        "balanceUsd": 95520.6,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 495444.76,
        "balanceUsd": 95277.84,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 494178.17,
        "balanceUsd": 95034.26,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 492907.36,
        "balanceUsd": 94789.88,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 491632.31,
        "balanceUsd": 94544.67,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 490353,
        "balanceUsd": 94298.65,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 489069.42,
        "balanceUsd": 94051.81,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 487781.55,
        "balanceUsd": 93804.14,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2031-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 486489.38,
        "balanceUsd": 93555.65,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 485192.89,
        "balanceUsd": 93306.32,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 483892.06,
        "balanceUsd": 93056.17,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 482586.88,
        "balanceUsd": 92805.17,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 481277.32,
        "balanceUsd": 92553.33,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 479963.38,
        "balanceUsd": 92300.65,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 478645.04,
        "balanceUsd": 92047.12,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 477322.28,
        "balanceUsd": 91792.75,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 475995.08,
        "balanceUsd": 91537.52,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 474663.43,
        "balanceUsd": 91281.43,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 473327.31,
        "balanceUsd": 91024.48,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 471986.7,
        "balanceUsd": 90766.67,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2032-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 470641.59,
        "balanceUsd": 90508,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 469291.95,
        "balanceUsd": 90248.45,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 467937.78,
        "balanceUsd": 89988.04,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 466579.06,
        "balanceUsd": 89726.74,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 465215.76,
        "balanceUsd": 89464.57,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 463847.88,
        "balanceUsd": 89201.51,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 462475.38,
        "balanceUsd": 88937.57,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 461098.27,
        "balanceUsd": 88672.74,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 459716.51,
        "balanceUsd": 88407.02,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 458330.09,
        "balanceUsd": 88140.4,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 456939,
        "balanceUsd": 87872.88,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 455543.21,
        "balanceUsd": 87604.46,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2033-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 454142.71,
        "balanceUsd": 87335.14,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 452737.48,
        "balanceUsd": 87064.9,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 451327.5,
        "balanceUsd": 86793.75,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 449912.76,
        "balanceUsd": 86521.68,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 448493.23,
        "balanceUsd": 86248.7,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 447068.9,
        "balanceUsd": 85974.79,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 445639.75,
        "balanceUsd": 85699.95,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 444205.76,
        "balanceUsd": 85424.19,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 442766.92,
        "balanceUsd": 85147.48,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 441323.2,
        "balanceUsd": 84869.85,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 439874.59,
        "balanceUsd": 84591.27,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 438421.07,
        "balanceUsd": 84311.74,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2034-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 436962.62,
        "balanceUsd": 84031.27,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 435499.22,
        "balanceUsd": 83749.85,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 434030.85,
        "balanceUsd": 83467.47,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 432557.49,
        "balanceUsd": 83184.13,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 431079.13,
        "balanceUsd": 82899.83,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 429595.75,
        "balanceUsd": 82614.57,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 428107.32,
        "balanceUsd": 82328.33,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 426613.83,
        "balanceUsd": 82041.12,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 425115.26,
        "balanceUsd": 81752.93,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-09",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 423611.59,
        "balanceUsd": 81463.77,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-10",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 422102.8,
        "balanceUsd": 81173.62,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-11",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 420588.87,
        "balanceUsd": 80882.48,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2035-12",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 419069.79,
        "balanceUsd": 80590.34,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-01",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 417545.52,
        "balanceUsd": 80297.22,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-02",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 416016.06,
        "balanceUsd": 80003.09,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-03",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 414481.38,
        "balanceUsd": 79707.96,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-04",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 412941.46,
        "balanceUsd": 79411.82,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-05",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 411396.29,
        "balanceUsd": 79114.67,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-06",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 409845.84,
        "balanceUsd": 78816.51,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-07",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 408290.1,
        "balanceUsd": 78517.33,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-08",
        "withdrawalBrl": 3000,
      },
      {
        "balanceBrl": 406729.03,
        "balanceUsd": 78217.12,
        "fxUsdBrl": 5.2,
        "liquidityOk": true,
        "month": "2036-09",
        "withdrawalBrl": 3000,
      },
    ],
    "summary": {
      "monthsFunded": 120,
      "monthsTotal": 120,
      "shortfallBrl": 0,
      "targetMet": null,
      "terminalBalanceBrl": 406729.03,
    },
  },
  "risk": [
    {
      "assetId": "usdc",
      "creditExposure": "Circle reserves",
      "depthNote": "no depth observation yet",
      "gates": [],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": "Circle",
      "label": null,
      "oracle": "n/a (unit)",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "hold; Circle primary for institutions",
      "redemptionTime": "instant on DEX",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
    {
      "assetId": "kamino-usdc",
      "creditExposure": "over-collateralised borrowers of the main market; smart-contract risk",
      "depthNote": null,
      "gates": [],
      "haircutRule": "HC-LEND-VAR",
      "haircutYield": 0.03,
      "issuer": "Kamino Finance (protocol)",
      "label": null,
      "oracle": "Scope / Pyth (Kamino reserve config)",
      "provenance": "fixture",
      "quotedYield": 0.04,
      "redemptionPath": "withdraw from reserve D6q6wuQSrifJKZYpR1M8R4YawnLDtDsMmWM1NbBmgJ59",
      "redemptionTime": "instant while reserve has liquidity; utilisation-gated",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "syrupusdc",
      "creditExposure": "institutional over-collateralised loans (Syrup pool)",
      "depthNote": "no depth observation yet",
      "gates": [
        "bridged asset: Solana liquidity depends on DEX depth",
      ],
      "haircutRule": "HC-REALISED",
      "haircutYield": 0.0495,
      "issuer": "Maple Finance",
      "label": null,
      "oracle": "pool exchange rate (Ethereum) / Jupiter price",
      "provenance": "fixture",
      "quotedYield": 0.055,
      "redemptionPath": "Jupiter DEX on Solana; primary redemption on Ethereum without KYC",
      "redemptionTime": "instant on DEX; primary queue on Ethereum",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "usdy",
      "creditExposure": "short-dated US Treasuries and bank deposits (tokenized note)",
      "depthNote": "no depth observation yet",
      "gates": [
        "primary redemption: KYC, non-US persons, minimum size",
        "Brazil listed as restricted jurisdiction for primary access (Ondo eligibility)",
      ],
      "haircutRule": "HC-REALISED",
      "haircutYield": 0.045000000000000005,
      "issuer": "Ondo Finance",
      "label": null,
      "oracle": "USDY price oracle (accrues by price)",
      "provenance": "fixture",
      "quotedYield": 0.05,
      "redemptionPath": "Jupiter DEX (secondary); primary mint/redeem needs KYC, non-US, minimum",
      "redemptionTime": "instant on DEX; primary T+ days",
      "yieldFetchedAt": "2026-09-30T00:00:00.000Z",
      "yieldSource": "fixture",
    },
    {
      "assetId": "brl-leg",
      "creditExposure": "issuer of the BRL stablecoin (to be set at gate G-Nora)",
      "depthNote": null,
      "gates": [
        "primary mint limited to approved minters",
      ],
      "haircutRule": null,
      "haircutYield": null,
      "issuer": null,
      "label": "BRS mint via Nora: integration in progress",
      "oracle": "n/a (1:1 BRL)",
      "provenance": "live",
      "quotedYield": null,
      "redemptionPath": "issuer redeem to USDC (to be set at gate G-Nora)",
      "redemptionTime": "to be set at gate G-Nora",
      "yieldFetchedAt": null,
      "yieldSource": null,
    },
  ],
  "solved": {
    "bindingConstraints": [
      "credit budget 0.25 fully used",
      "usdy at cap 0.4",
    ],
    "legs": [
      {
        "amountUsd": 2000,
        "assetId": "usdc",
        "reasoning": "Liquidity buffer: covers withdrawals inside the 7-day window (1 month) plus a 2.0% floor",
        "weight": 0.02,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 5000,
        "assetId": "brl-leg",
        "reasoning": "Near-term BRL obligations (6 months) and an early-redemption reserve held in reais: no FX risk against the goal, no yield",
        "weight": 0.05,
        "yieldObservation": undefined,
      },
      {
        "amountUsd": 28000,
        "assetId": "kamino-usdc",
        "reasoning": "selected by haircut yield (protocol_api, rule HC-LEND-VAR, 2026-09-30)",
        "weight": 0.28,
        "yieldObservation": {
          "assetId": "kamino-usdc",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-LEND-VAR",
          "haircutYield": 0.03,
          "method": "protocol_api",
          "provenance": "fixture",
          "quotedYield": 0.04,
          "source": "fixture",
        },
      },
      {
        "amountUsd": 25000,
        "assetId": "syrupusdc",
        "reasoning": "Credit leg within the credit budget; selected by haircut yield (realised_30d, rule HC-REALISED, 2026-09-30)",
        "weight": 0.25,
        "yieldObservation": {
          "assetId": "syrupusdc",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-REALISED",
          "haircutYield": 0.0495,
          "method": "realised_30d",
          "provenance": "fixture",
          "quotedYield": 0.055,
          "source": "fixture",
        },
      },
      {
        "amountUsd": 40000,
        "assetId": "usdy",
        "reasoning": "selected by haircut yield (realised_30d, rule HC-REALISED, 2026-09-30)",
        "weight": 0.4,
        "yieldObservation": {
          "assetId": "usdy",
          "fetchedAt": "2026-09-30T00:00:00.000Z",
          "haircutRule": "HC-REALISED",
          "haircutYield": 0.045000000000000005,
          "method": "realised_30d",
          "provenance": "fixture",
          "quotedYield": 0.05,
          "source": "fixture",
        },
      },
    ],
    "method": "lp",
    "notes": [],
  },
  "stresses": [
    {
      "id": "yields_fall",
      "name": "Yields fall",
      "summary": {
        "monthsFunded": 120,
        "monthsTotal": 120,
        "shortfallBrl": 0,
        "targetMet": null,
        "terminalBalanceBrl": 293856.79,
      },
    },
    {
      "id": "brl_appreciates",
      "name": "BRL appreciates vs USD",
      "summary": {
        "monthsFunded": 120,
        "monthsTotal": 120,
        "shortfallBrl": 0,
        "targetMet": null,
        "terminalBalanceBrl": 256761.33,
      },
    },
    {
      "id": "brl_depreciates",
      "name": "BRL depreciates vs USD",
      "summary": {
        "monthsFunded": 120,
        "monthsTotal": 120,
        "shortfallBrl": 0,
        "targetMet": null,
        "terminalBalanceBrl": 556688.66,
      },
    },
    {
      "id": "credit_gate",
      "name": "Credit leg gated (redemption frozen)",
      "summary": {
        "monthsFunded": 120,
        "monthsTotal": 120,
        "shortfallBrl": 0,
        "targetMet": null,
        "terminalBalanceBrl": 401599.33,
      },
    },
  ],
}
`;
